Closed Bug 916233 Opened 12 years ago Closed 12 years ago

[MP] Defect - external links open on desktop rather than metro UI

Categories

(Firefox for Metro Graveyard :: Firefox Start, defect, P1)

26 Branch
All
Windows 8.1
defect

Tracking

(firefox26+ fixed, firefox27 fixed)

VERIFIED FIXED
Firefox 27
Tracking Status
firefox26 + fixed
firefox27 --- fixed

People

(Reporter: kpoirot, Assigned: bbondy)

References

Details

(Keywords: regression, Whiteboard: [preview] feature=defect c=install_and_setup u=metro_firefox_user p=1)

Attachments

(1 file)

User Agent: Mozilla/5.0 (Windows NT 6.2; WOW64; rv:26.0) Gecko/20100101 Firefox/26.0 (Beta/Release) Build ID: 20130913030201 Steps to reproduce: STR : open mail app from metro find a http or https link in your mails and click on it firefox metro don't open check on the desktop, nightly opened there Actual results: nothing happens firefox metro don't open (while it is set as default browser) if you check the desktop, nightly opened the link there Expected results: the link should open into nightly metro
OS: All → Windows 8 Metro
Summary: external links open on desktop rather than metro UI → Defect - external links open on desktop rather than metro UI
Whiteboard: [preview-triage] feature=defect c=tbd u=tbd p=0
This is a recent regression I can reproduce on the 9/15 nightly build on Windows 8.0 and 8.1.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Whiteboard: [preview-triage] feature=defect c=tbd u=tbd p=0 → [preview] feature=defect c=tbd u=tbd p=0
Summary: Defect - external links open on desktop rather than metro UI → [MP] Defect - external links open on desktop rather than metro UI
Blocks: metrov1it15
No longer blocks: metrov1backlog
Status: NEW → ASSIGNED
Whiteboard: [preview] feature=defect c=tbd u=tbd p=0 → [preview] feature=defect c=tbd u=tbd p=1
Attached patch Patch v1.Splinter Review
Assignee: nobody → netzen
Priority: -- → P1
QA Contact: jbecerra
Comment on attachment 805615 [details] [diff] [review] Patch v1. bad hresult check
Attachment #805615 - Flags: review?(jmathies)
Attachment #805615 - Flags: review?(jmathies) → review+
Keywords: checkin-needed
Keywords: checkin-needed
Target Milestone: --- → Firefox 27
Whiteboard: [preview] feature=defect c=tbd u=tbd p=1 → [preview] feature=defect c=install_and_setup u=metro_firefox_user p=1
Blocks: 831887
Should we nominate this for Aurora?
Yes, we should get this into Aurora for sure.
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Comment on attachment 805615 [details] [diff] [review] Patch v1. [Approval Request Comment] Bug caused by (feature/regressing bug #): Bug 882142 User impact if declined: Opening links in the Metro environment will switch to Desktop and open the Desktop browser even if we are the default browser. Testing completed (on m-c, etc.): m-c Risk to taking this patch (and alternatives if risky): very low String or IDL/UUID changes made by this patch: none
Attachment #805615 - Flags: approval-mozilla-aurora?
Comment on attachment 805615 [details] [diff] [review] Patch v1. We need this uplifted to go into the Aurora builds for tomorrow's unthrottling - approved.
Attachment #805615 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Tried to land but the aurora tree is closed.
Keywords: checkin-needed
Verified as fixed with the latest Nightly, for iteration #15, on both Win 8 32-bit and 64-bit. After following the STR from comment 0, after clicking a link from my Yahoo email account, it opens in Metro, in a new tab, as expected.
Status: RESOLVED → VERIFIED
> Verified as fixed with the latest Nightly, for iteration #15, on both Win 8 > 32-bit and 64-bit. > > After following the STR from comment 0, after clicking a link from my Yahoo > email account, it opens in Metro, in a new tab, as expected. Also verified with latest Aurora, build ID: 20131002004002, on both Win 8 32-bit and 64-bit.
OS: Windows 8 Metro → Windows 8.1
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: