Bug 916233 - External links in Metro should open in Metro. r=jimm, a=lsblakk